<resources>
    <string name="app_name">Harare</string>
    <string name="about_name">Google Maps and Google Places API</string>
    <string name="google_maps_api">AIzaSyCgsHfytpdqYIW27EluPiswTsyBIjGjSRE</string>
    <string name="sha1">5B:23:20:47:E8:B9:9D:AE:A7:5E:B9:6B:72:B7:9C:18:5A:38:59:9A</string>
    <string name="packagename">com.edufree.harare</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tour">Tour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My Notes</string>
    <string name="edit_note">EDIT NOTE</string>
    <string name="write_a_note">Write a note ....</string>
    <string name="n1_hotel">N1 Hotel Harare</string>
    <string name="outdoor">Outdoors and Recreation</string>
    <string name="shop">Shop and Service</string>
    <string name="transport">Public Transport</string>
    <string name="arts">Arts and Entertainment</string>
    <string name="food">Food</string>
    <string name="hotel">Hotels</string>
    <string name="t1_detail">On a bustling street in the city centre, this down-to-earth budget hotel in a redbrick building is a 16-minute walk from Harare Gardens and 1 km from Harare Train Station.Featuring high ceilings, the airy, streamlined rooms come with Wi-Fi access, and tea and coffeemaking facilities, as well as en suite bathrooms.</string>
    <string name="t1_phone">03-078534</string>
    <string name="t1_address">23 Kenny Rd, Avondale Harare</string>
    <string name="t2_name">Cresta Jameson</string>
    <string name="t2_detail">Complimentary breakfast is served in 1 of 3 casual restaurants. There’s a casino on-site, as well as a conference centre, a gym and a lounge bar. Other amenities include a tennis court, 2 outdoor pools (1 for kids) and event space. Beauty and massage services are offered. Parking is available.</string>
    <string name="t2_address"><![CDATA[Cnr Samora Machel & Park Street, Harare, 0, Zimbabwe]]></string>
    <string name="t2_phone">003 078534</string>
    <string name="t3_name">Rainbow Towers Hotel And Conference Centre</string>
    <string name="t3_detail">On the outskirts of downtown, this relaxed business hotel is 4 km from Harare Train Station, and less than 1 km from exhibits at the Museum of Human Sciences, which features a library.Laid-back rooms offer free Wi-Fi, flat-screen TVs, tea and coffeemakers, and minifridges, plus safes and en suite bathrooms</string>
    <string name="t3_address">Pennefather Ave, Harare, Zimbabwe</string>
    <string name="t3_phone">043 57623</string>
    <string name="t4_name">New Ambassador Hotel</string>
    <string name="t4_detail">Set a block from the Harahe Gardens, this relaxed hotel is a 5-minute walk from the National Gallery of Zimbabwe. Baronscourt bus station is 1 km away.The casual rooms offer TV and en suite bathrooms, in addition to tea and coffeemaking facilities. Room service is available 24/7.</string>
    <string name="t4_address">88 Kwame Nkrumah Ave Box 872, Livingstone, Harare, Zimbabwe</string>
    <string name="t4_phone">003 078534</string>
    <string name="t5_name">The Bronte Garden Hotel</string>
    <string name="t5_deatil">Housed in a low-rise, Colonial-style building surrounded by gardens, this refined hotel is a 14-minute walk from the National Gallery of Zimbabwe and 2 km from Harare train station.Elegant rooms have terraces or balconies overlooking gardens, and offer free Wi-Fi, satellite TV, and tea and coffeemaking facilities. Suites add sitting areas and minibars. Room service is available</string>
    <string name="t5_address">53J2+RX Harare, Zimbabwe</string>
    <string name="t5_phone">003 078534</string>
    <string name="t6_name"><![CDATA[Baines Bed & Breakfast Hotel]]></string>
    <string name="t6_detail">On the outskirts of downtown, this relaxed business hotel is 4 km from Harare Train Station, and less than 1 km from exhibits at the Museum of Human Sciences, which features a library.Laid-back rooms offer free Wi-Fi, flat-screen TVs, tea and coffeemakers, and minifridges, plus safes and en suite bathrooms</string>
    <string name="t6_details">53J2+JM Harare, Zimbabwe</string>
    <string name="t6_phone">003 078534</string>
    <string name="t7_name">Chicken Inn Samora and Fifth</string>
    <string name="t7_detail">Freshly fried hot chips, excellently roasted chicken with the trademark chicken inn flavour. The road leading to this eat house is wide so it\'s easily accessible.</string>
    <string name="t7_address">53G4+45 Harare, Zimbabwe</string>
    <string name="t7_phone">003 078534</string>
    <string name="t8_name">Mojo\'s Restaurant</string>
    <string name="t8_address">10 East Rd, Harare, Zimbabwe</string>
    <string name="t8_phone">003 078534</string>
    <string name="t9_name">KFC Belgravia</string>
    <string name="t9_address">Maasdorp Avenue, Harare, Zimbabwe</string>
    <string name="t9_phone">003 078534</string>
    <string name="t10_name">Chop Chop Brazillian SteakHouse</string>
    <string name="t10_address">Avenues, Harare, Zimbabwe</string>
    <string name="t10_phone">003 078534</string>
    <string name="t11_name">Fishmonger Restaurant</string>
    <string name="t11_address">50 East Rd, Harare, Zimbabwe</string>
    <string name="t11_phone">003 078534</string>
    <string name="t12_name">Queen Makeda Ethiopian Restaurant</string>
    <string name="t12_address">3 Lanark Rd, Harare, Zimbabwe</string>
    <string name="t12_phone">003 078534</string>
    <string name="t13_name">Macadams Fast Foods</string>
    <string name="t13_address">34 Samora Machel Ave, Harare, Zimbabwe</string>
    <string name="t13_phone">003 078534</string>
    <string name="t14_name">China Garden Restaurant</string>
    <string name="t14_address">17 Rowland Square, Harare, Zimbabwe</string>
    <string name="t14_phone">003 078534</string>
    <string name="t15_name">Vivacity Arts Association</string>
    <string name="t15_address">68, McChlery Ave S, Harare, Zimbabwe</string>
    <string name="t15_phone">003 078534</string>
    <string name="t16_name">First Floor Gallery Harare</string>
    <string name="t16_detail">Upbeat gallery exhibiting brilliant contemporary artist mostly upcoming artists from Zimbabwe but also different artists from all over africa as well.</string>
    <string name="t16_address">2nd Floor, Karigamombe Center, 53 A5, Zi</string>
    <string name="t16_phone">003 078534</string>
    <string name="t17_name">Njelele Art Station</string>
    <string name="t17_detail">Njelele continues to positively contribute to the Zimbabwean art scene through its presence in harare\'s down town in the CBD; its residences, exhibitions and conversation. It\'s always a good time in creative hub! Great networking space too!</string>
    <string name="t17_address">131 Kaguvi St, Harare, Zimbabwe</string>
    <string name="t17_phone">003 078534</string>
    <string name="t18_name">Culinary Arts Academy</string>
    <string name="t18_address">68 Old Enterprise, Harare, Zimbabwe</string>
    <string name="t18_phone">003 078534</string>
    <string name="t19_name">Fourth Street Bus Terminal</string>
    <string name="t19_detail">The terminal is well organised, wide range of selection as far as the buses are concerned. The security is also very good ( the atmosphere is okay)</string>
    <string name="t19_address">Fifth St, Harare, Zimbabwe</string>
    <string name="t19_phone">003 078534</string>
    <string name="t20_name">Coppacabanna Bus Terminus</string>
    <string name="t20_detail">Popular rank in Harare CBD. Veru popular with commuters to the western suburbs of Harare. Awaya very busy and to many touts.  All buses are available and easy to commute.  One can not get stuck in town as they is also a shuttle service linking this to other centers.</string>
    <string name="t20_address">Speke Ave, Harare, Zimbabwe</string>
    <string name="t20_phone">003 078534</string>
    <string name="t21_name">Rezende Street Bus Terminal</string>
    <string name="t21_detail">More convenient for students travelling to University of Zimbabwe</string>
    <string name="t21_address">Rezende, Harare, Zimbabwe</string>
    <string name="t21_phone">003 078534</string>
    <string name="t22_name">Angwa Street Bus Terminal</string>
    <string name="t22_detail">Where you get transport for southern suburbs of Harare.</string>
    <string name="t22_address">Robson Manyika, Harare, Zimbabwe</string>
    <string name="t22_phone">003 078534</string>
    <string name="t23_name">Market Square Bus Terminal</string>
    <string name="t23_detail">Very busy place and easily accessible from all directions. The place has buses to most major destinations to the southern suburbs also a shuttle service available to link the city centre and other bus terminals in the city. Crowded place but manageable. The entrance can be a bit tricky for the handicapped but quite accessible.</string>
    <string name="t23_address">Bute St, Harare, Zimbabwe</string>
    <string name="t23_phone">003 078534</string>
    <string name="t24_name">National Tyre Services Limited</string>
    <string name="t24_detail">Fairly priced goods and services. When the job is you are guaranteed of the best. May need to increase human resources to reduce on waiting time for customers. Time factor.</string>
    <string name="t24_address"><![CDATA[Corner Cripps &, Seke Rd, Harare, Zimbabwe]]></string>
    <string name="t24_phone">003 078534</string>
    <string name="t25_name">Swag Shop (Arundel)</string>
    <string name="t25_address">51 Quorn Ave, Harare, Zimbabwe</string>
    <string name="t25_phone">003 078534</string>
    <string name="t26_name">Manhattan Interiors</string>
    <string name="t26_detail">Their furniture is of good quality and even in this unstable environment, their prices are relatively stable and reasonable.</string>
    <string name="t26_address">Shop 108, Sam Levy\'s Village, Borrowdale, Harare, Zimbabwe</string>
    <string name="t26_phone">003 078534</string>
    <string name="t27_name">ENBEE STORES - Main Branch</string>
    <string name="t27_address">64 Leopold Takawira St, Harare, Zimbabwe</string>
    <string name="t27_phone">003 078534</string>
    <string name="t28_name">Sassafras Fabrics</string>
    <string name="t28_address">Virginia Ln, Harare, Zimbabwe</string>
    <string name="t28_phone">003 078534</string>
    <string name="t29_name">Mukuvisi Woodlands</string>
    <string name="t29_detail">Great Sunday morning walks in the heart of nature and burst of fresh air. 3km, 5km, 8km and 10km marked trails Like  Share</string>
    <string name="t29_address">Blatherwick Rd, Harare, Zimbabwe</string>
    <string name="t29_phone">003 078534</string>
    <string name="t30_name">Arcadia Sports Club</string>
    <string name="t30_address">Harare, Zimbabwe</string>
    <string name="t30_phone">003 078534</string>
    <string name="t31_name">Mabelreign Park</string>
    <string name="t31_address">Harare, Zimbabwe</string>
    <string name="t31_phone">003 078534</string>
    <string name="t32_name">Haka Camp Game Park</string>
    <string name="t32_address">Harare, Zimbabwe</string>
    <string name="t32_phone">003 078534</string>
    <string name="v1_name">Code Wizards</string>
    <string name="search_for_any_place_in_harare">search for any place in Harare...</string>
    <string name="ensure">To ensure your images appear at their best on all screens, you should provide alternative bitmaps to match each screen density. For example, if your app provides bitmaps only for medium density (mdpi) screens, Android scales them up when on a high-density screen so that the image occupies the same physical space on the screen</string>
</resources>