<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/myMap_relative_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <fragment
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/map"
                        tools:context=".MapsActivity"
                        android:name="com.google.android.gms.maps.SupportMapFragment" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_marginLeft="@dimen/dp_25"
                            android:padding="@dimen/dp_10"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                app:srcCompat="@drawable/ic_location"
                                android:layout_width="@dimen/dp_30"
                                android:layout_height="@dimen/dp_30">
                            </ImageView>

                            <TextView
                                android:id="@+id/address_id"
                                android:layout_marginLeft="@dimen/dp_15"
                                tools:text="Address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <View
                            android:layout_marginTop="@dimen/dp_10"
                            android:background="@color/rugare"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_marginLeft="@dimen/dp_25"
                            android:padding="@dimen/dp_25"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                app:srcCompat="@drawable/ic_phone"
                                android:layout_width="@dimen/dp_30"
                                android:layout_height="@dimen/dp_30">
                            </ImageView>

                            <TextView
                                android:id="@+id/phone_id"
                                android:autoLink="phone"
                                android:layout_marginLeft="@dimen/dp_15"
                                tools:text="09-564 332"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <View
                            android:layout_marginTop="@dimen/dp_10"
                            android:background="@color/rugare2"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:background="@color/addnote_background"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:weightSum="5"
                    android:layout_height="@dimen/dp_0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="2"
                        android:layout_marginTop="@dimen/five_dp"
                        android:orientation="horizontal"
                        android:layout_height="@dimen/dp_0">
                        <TextView
                            android:text="@string/my_notes"
                            android:textStyle="bold"
                            android:textSize="@dimen/myNotes_size"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_weight="1"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/editNote_text"
                            android:textAlignment="textEnd"
                            android:layout_marginRight="@dimen/dp_15"
                            android:textColor="@color/edit_text_color"
                            android:text="@string/edit_note"
                            android:layout_weight="1"
                            android:layout_width="@dimen/dp_1"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/editnote_linear_id"
                        android:layout_width="match_parent"
                        android:layout_weight="3"
                        android:layout_margin="@dimen/dp_10"
                        android:background="@color/bg_white"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/dp_0">
                        <ImageView
                            android:layout_marginLeft="@dimen/dp_10"
                            app:srcCompat="@drawable/ic_note"
                            android:layout_width="@dimen/dp_30"
                            android:layout_height="@dimen/dp_30"/>
                        <TextView
                            android:layout_marginLeft="@dimen/dp_15"
                            android:text="@string/write_a_note"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:background="#B6E4DF"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/mTour_detail_id"
                            android:textColor="@color/major"
                            android:padding="@dimen/padding_detail"
                            tools:text="@string/ensure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:elevation="10dp"
            android:background="@drawable/white_border"
            android:layout_height="@dimen/dp_50">

            <ImageView
                android:id="@+id/ic_magnify"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_10"
                app:srcCompat="@drawable/ic_magnify"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"/>

            <AutoCompleteTextView
                android:id="@+id/input_search"
                android:layout_toRightOf="@id/ic_magnify"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:textSize="@dimen/sp_15"
                android:hint="@string/search_for_any_place_in_harare"
                android:background="@null"
                android:textColor="@color/bg_black"
                android:imeOptions="actionSearch"
                android:layout_height="match_parent"/>

        </RelativeLayout>
        <ImageView
            android:id="@+id/ic_gps"
            app:srcCompat="@drawable/ic_gps"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/relLayout1"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"/>

        <ImageView
            android:id="@+id/ic_tourImage"
            app:srcCompat="@drawable/ic_gps"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relLayout1"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"/>

        <ImageView
            android:id="@+id/exit_map_id"
            app:srcCompat="@drawable/ic_exit_black"
            android:layout_margin="@dimen/dp_5"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/myReyclerList_relative_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar_tour"
            android:layout_width="match_parent"
            android:elevation="@dimen/dp_5"
            android:background="@color/bg_white"
            app:popupTheme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tour_rv"
            android:layout_width="match_parent"
            android:layout_below="@id/my_toolbar_tour"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</RelativeLayout>